// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features E2E tests when listing flags will return all flags 1`] = `
[
  {
    "createdAt": "2021-01-01T00:00:00.000Z",
    "description": "This is a test feature",
    "enabled": true,
    "key": "awesome_feature",
    "name": "Latest Awesome Thing",
    "updatedAt": "2021-01-01T00:00:00.000Z",
  },
  {
    "createdAt": "2021-01-01T00:00:00.000Z",
    "description": "This is a test feature",
    "enabled": false,
    "key": "old_feature",
    "name": "Old and Busted",
    "updatedAt": "2021-01-01T00:00:00.000Z",
  },
  {
    "createdAt": "2021-01-01T00:00:00.000Z",
    "description": "Shhh! No one is supposed to know about this",
    "enabled": false,
    "key": "secret_feature",
    "name": "Top Secret Feature",
    "updatedAt": "2021-01-01T00:00:00.000Z",
  },
]
`;

exports[`Features E2E tests when retrieving a single flag will return the flag if it exists 1`] = `
{
  "createdAt": "2021-01-01T00:00:00.000Z",
  "description": "This is a test feature",
  "enabled": false,
  "key": "old_feature",
  "name": "Old and Busted",
  "updatedAt": "2021-01-01T00:00:00.000Z",
}
`;
